<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accessibility_announcement_episode_expanded">Episode description shown</string>
    <string name="accessibility_event_form_field_error">Field: <g id="field_name">%1$s</g>, error: <g id="field_error">%2$s</g></string>
    <string name="accessibility_event_plus_one_toggle_off">You have removed your +1</string>
    <string name="accessibility_event_plus_one_toggle_on">You have added your +1</string>
    <string name="accessibility_event_tab_selected"><g id="tab_title">%1$s</g> selected</string>
    <string name="account_required">You must add an account to the device to continue. Do you want to add one now?</string>
    <string name="account_required_external">To use Google Play Store you need a Google Account.</string>
    <string name="active_subscriptions_body">Charges for your subscriptions will continue until you cancel.</string>
    <string name="active_subscriptions_title"><g id="package">%1$s</g> has active subscriptions</string>
    <string name="activity_not_found">No Activity could be found to launch that Action.</string>
    <string name="add_carrier_billing_error">An error occurred while setting up your <g id="carrier_name">%1$s</g> account. Please try again.</string>
    <string name="add_carrier_billing_introduction">You can bill purchases directly to your <g id="carrier_name">%1$s</g> account.</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="add_to_library">Add to library</string>
    <string name="add_to_newsstand">Add to Newsstand</string>
    <string name="address">Address</string>
    <string name="album_copyright">Copyright</string>
    <string name="album_genre">Genre</string>
    <string name="album_only_purchase">Album only</string>
    <string name="album_release_date">Released on</string>
    <string name="all_access_button_free_trial">Free trial</string>
    <string name="all_access_button_subscribe">Subscribe</string>
    <string name="all_access_label_bottom_alternate_try_all_access">Listen to this album and millions more. First month on us.</string>
    <string name="all_access_label_bottom_available_in_all_access">This album is available to stream with a Google Play Music subscription</string>
    <string name="all_access_label_bottom_try_all_access">Listen to this album and millions more. First month free.</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="allow_auto_updating">Auto-update</string>
    <string name="already_has_access_to">It already has access to:</string>
    <string name="also_needs_access_to">also needs access to</string>
    <string name="antenna_playlist">Playlist</string>
    <string name="app_already_installed_other_user">You cannot install this app because another user has already installed an incompatible version on this device.</string>
    <string name="app_also_needs_access_to">&lt;b><g id="app_title">%1$s</g>&lt;/b> also needs access to</string>
    <string name="app_content_rating">Content rating</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_install_success">Installation successful</string>
    <string name="app_long_name">Google Play Store</string>
    <string name="app_name">Google Play</string>
    <string name="app_needs_access_to">&lt;b><g id="app_title">%1$s</g>&lt;/b> needs access to</string>
    <string name="app_size">Size</string>
    <string name="app_unavailable_message">"This app isn't available. Would you like to visit the Google Play site for more information?"</string>
    <string name="app_update_date">Updated on</string>
    <string name="app_version">Version</string>
    <string name="approve">Approve</string>
    <string name="apps_by">Apps by <g example="Playbox" id="pubname">%1$s</g></string>
    <string name="archive_label">Remove</string>
    <string name="archiving">Removing…</string>
    <string name="archiving_no_uninstall_confirmation">Remove \"<g id="app_title">%1$s</g>\" from my apps?</string>
    <string name="archiving_no_uninstall_confirmation_multiple">Remove the selected apps from my apps?</string>
    <string name="artist_radio_station_text">Start free radio</string>
    <string name="ask_to_buy_dialog_title">Approve purchase</string>
    <string name="asset_removed_bar">\"<g id="appname">%1$s</g>\" has been removed.</string>
    <string name="asset_removed_message">\"<g id="appname">%1$s</g>\" has been removed from your phone. You will receive an email with details.</string>
    <string name="asset_removed_title">\"<g id="appname">%1$s</g>\" has been removed.</string>
    <string name="associating_device_message">Sending account verification SMS to your mobile service provider.</string>
    <string name="associating_device_timeout_message">"Can't verify your account. Try again later."</string>
    <string name="auth_challenge_opt_out_info">Disabling authentication may result in unauthorized purchases. You assume responsibility for all charges. <g id="open_url">&lt;a href=\"%1$s\"></g>Learn more<g id="close_url">&lt;/a></g></string>
    <string name="auth_challenge_opt_out_title">Never ask me again</string>
    <string name="auth_required_error">Authentication is required. You need to sign into your Google Account.</string>
    <string name="auth_required_error_oem">Your recent Google Play items will appear here. Touch to sign in.</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_update_available_notification">App updates available</string>
    <string name="auto_update_available_notification_summary">Notify when app updates are available</string>
    <string name="auto_update_completion_notification">Apps were auto-updated</string>
    <string name="auto_update_completion_notification_summary">Notify when apps are automatically updated</string>
    <string name="auto_update_label">Auto-update apps</string>
    <string name="cancel">Cancel</string>
    <string name="change_family_instrument">Change family payment method</string>
    <string name="clear_local_history_summary">Remove searches you have performed from this device</string>
    <string name="clear_local_history_title">Clear local search history</string>
    <string name="content_filtering_description">Set filters to restrict apps that can be downloaded</string>
    <string name="content_filtering_label">Parental controls</string>
    <string name="download">Download</string>
    <string name="fingerprint_auth_settings_description">For Google Play purchases on this device</string>
    <string name="fingerprint_auth_settings_label">Fingerprint authentication</string>
    <string name="from_name_hint">Enter your name</string>
    <string name="from_name_output">From: <g id="from_name_value">%1$s</g></string>
    <string name="gift_send_to_another">If the recipient does not want this gift, you can send it to someone else.</string>
    <string name="location_setting_description">Improve recommendations using my precise location, including from GPS</string>
    <string name="location_setting_title">Use precise location</string>
    <string name="message_hint">Enter a message</string>
    <string name="more_payment_settings">More payment settings</string>
    <string name="my_account_complete_account_description">Tap below to streamline your next purchase of great entertainment, apps, and games.</string>
    <string name="news_offers_summary">Stay up to date with news and offers from Google Play</string>
    <string name="news_offers_title">Receive news and offers</string>
    <string name="open">Open</string>
    <string name="os_licenses_label">Open source licenses</string>
    <string name="os_licenses_summary">License details for open source software</string>
    <string name="payment_methods">Payment methods</string>
    <string name="play_dot_notification_content_description">New notification</string>
    <string name="purchase_auth_settings_label">Require authentication for purchases</string>
    <string name="purchase_auth_underage_disclaimer">Authentication is always required for purchases through Google Play within apps designated for ages 12 and under.</string>
    <string name="purchase_auth_value_always">For all purchases through Google Play on this device</string>
    <string name="purchase_auth_value_never">Never</string>
    <string name="purchase_auth_value_session">Every 30 minutes</string>
    <string name="sample">Free sample</string>
    <string name="search_hint">Search Google Play</string>
    <string name="send_gift">Send Gift</string>
    <string name="settings_about_header">About</string>
    <string name="settings_build_version">Build version</string>
    <string name="settings_general_section_header">General</string>
    <string name="settings_notifications_section_header">Notifications</string>
    <string name="settings_user_controls_section_header">User controls</string>
    <string name="setup_wizard_apps_selection_title">Also include</string>
    <string name="setup_wizard_device_prompt">Restore from this backup</string>
    <string name="setup_wizard_restore_apps_snippet">Backups include apps, app data, system settings and Wi-Fi passwords.</string>
    <string name="setup_wizard_restore_apps_title">Easily set up your new device by restoring from a backup of another device.</string>
    <string name="to_email_hint">Enter recipient email address</string>
    <string name="to_email_output">To: <g id="to_email_value">%1$s</g></string>
    <string name="uninstall">Uninstall</string>
    <string name="update">Update</string>
    <string name="wallet_im_card_number">Card number</string>
    <string name="wallet_im_content_description_expand_credit_card">Expand credit card information</string>
    <string name="wallet_im_nfc_credit_card">Tap to read your card.</string>
    <string name="wallet_im_scan_credit_card">Scan credit card with your camera</string>
    <string name="wallet_im_view_card_logos">View accepted cards</string>
    <string name="debug_environment_action_bar_title">Environment indicator</string>
    <string name="download_now_radio_button">Download now</string>
    <string name="download_settings_label">Download apps</string>
    <string name="use_mobile_network_warning">"To avoid data charges, you can postpone the download until there's Wi-Fi"</string>
    <string name="wait_for_wifi_radio_button">Wait for Wi-Fi</string>
</resources>