<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_general_section_header" android:key="category-general">
        <com.google.android.finsky.activities.SettingsListPreference android:title="@string/auto_update_label" android:key="auto-update-mode" />
        <com.google.android.finsky.activities.SettingsListPreference android:title="@string/download_settings_label" android:key="download-mode" />
        <CheckBoxPreference android:title="@string/auto_add_shortcuts_label" android:key="auto-add-shortcuts" android:summary="@string/auto_add_shortcuts_description" />
        <Preference android:title="@string/clear_local_history_title" android:key="clear-history" android:summary="@string/clear_local_history_summary" />
        <CheckBoxPreference android:title="@string/news_offers_title" android:key="receive-emails" android:summary="@string/news_offers_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_notifications_section_header">
        <CheckBoxPreference android:title="@string/auto_update_available_notification" android:key="update-notifications" android:summary="@string/auto_update_available_notification_summary" />
        <CheckBoxPreference android:title="@string/auto_update_completion_notification" android:key="update-completion-notifications" android:summary="@string/auto_update_completion_notification_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_user_controls_section_header" android:key="category-user-controls">
        <CheckBoxPreference android:title="@string/location_setting_title" android:key="location" android:summary="@string/location_setting_description" />
        <Preference android:title="@string/content_filtering_label" android:key="content-level" android:summary="@string/content_filtering_description" />
        <CheckBoxPreference android:title="@string/fingerprint_auth_settings_label" android:key="fingerprint-auth" android:summary="@string/fingerprint_auth_settings_description" />
        <Preference android:title="@string/purchase_auth_settings_label" android:key="purchase-auth" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_about_header">
        <Preference android:title="@string/os_licenses_label" android:key="os-licenses" android:summary="@string/os_licenses_summary" />
        <Preference android:title="@string/settings_build_version" android:key="build-version" />
    </PreferenceCategory>
</PreferenceScreen>