<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:finsky="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/gift_dialog_header" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailPadding">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gifting_white_36" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/gift_email_horizontal_padding">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/send_gift" style="@style/GiftEmailTitleText" />
            <TextView android:id="@id/item_title" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailItemText" />
            <TextView android:id="@id/item_offer_title" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailItemText" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/GiftEmailPadding">
            <com.google.android.finsky.layout.LabelEditText android:id="@id/to_email_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/to_email_hint" android:inputType="textEmailAddress" android:imeOptions="actionNext|flagNoExtractUi" finsky:labelFormat="@string/to_email_output" />
            <com.google.android.finsky.layout.LabelEditText android:id="@id/from_name_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/from_name_hint" android:inputType="textPersonName|textCapWords" android:imeOptions="actionNext|flagNoExtractUi" finsky:labelFormat="@string/from_name_output" />
            <EditText android:id="@id/gift_message_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="100.0dip" android:hint="@string/message_hint" android:inputType="textAutoCorrect|textCapSentences|textMultiLine" android:imeOptions="actionDone|flagNoExtractUi" />
            <TextView android:textSize="@dimen/play_purchase_small_size" android:gravity="end" android:orientation="horizontal" android:id="@id/character_count" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/gift_email_margin_trimming" android:layout_marginRight="@dimen/gift_email_edit_text_spacing" />
            <TextView android:textSize="@dimen/play_purchase_small_size" android:id="@id/gift_email_copy" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/play_purchase_small_size" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gift_send_to_another" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>