<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/use_mobile_network_warning" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/installation_size" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
    <RadioGroup android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/download_now" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/download_now_radio_button" />
        <RadioButton android:textAppearance="?android:textAppearanceMedium" android:id="@id/wait_for_wifi" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="12.0dip" android:text="@string/wait_for_wifi_radio_button" />
    </RadioGroup>
</LinearLayout>