<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:im="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/header" layout="@layout/view_form_header" />
    <include android:id="@id/card_images" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?imFirstCreditCardLogoStartMargin" android:layout_alignTop="@id/card_number_concealed" android:layout_alignBottom="@id/card_number_concealed" layout="@layout/view_credit_card_images" />
    <TextView android:id="@id/card_number_concealed" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="?imCardNumberOneCardModeStartMargin" android:layout_marginBottom="?uicFormVerticalMargin" android:minHeight="?uicFormItemHeight" android:layout_toLeftOf="@id/expand_icon" android:layout_below="@id/header" style="?attr/uicFormInputTextAppearance" />
    <ImageView android:id="@id/expand_icon" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wallet_uic_margin_touchable" android:src="?imExpandDrawable" android:scaleType="center" android:minWidth="@dimen/wallet_uic_minimum_tappable_item_size" android:minHeight="?uicFormItemHeight" android:layout_alignTop="@id/card_number_concealed" android:layout_alignBottom="@id/card_number_concealed" android:layout_alignParentRight="true" android:contentDescription="@string/wallet_im_content_description_expand_credit_card" style="@style/UicClickableItem" />
    <com.google.android.wallet.instrumentmanager.ui.card.CardNumberEditText android:id="@id/card_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="?uicFormVerticalMargin" android:minHeight="?uicFormItemHeight" android:hint="@string/wallet_im_card_number" android:layout_toLeftOf="@id/ocr_icon" android:layout_below="@id/card_number_concealed" im:internalUicValidateWhenNotVisible="true" style="?attr/uicFormInputTextAppearance" />
    <ImageView android:id="@id/ocr_icon" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wallet_uic_margin_touchable" android:layout_marginBottom="?uicFormVerticalMargin" android:src="?imCameraDrawable" android:minHeight="?uicFormItemHeight" android:layout_toLeftOf="@id/nfc_icon" android:layout_alignBottom="@id/card_number" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/wallet_im_scan_credit_card" style="@style/UicClickableItem" />
    <ImageView android:id="@id/nfc_icon" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wallet_uic_margin_touchable" android:layout_marginBottom="?uicFormVerticalMargin" android:src="?imNfcDrawable" android:minHeight="?uicFormItemHeight" android:layout_alignBottom="@id/card_number" android:layout_alignParentRight="true" android:contentDescription="@string/wallet_im_nfc_credit_card" style="@style/UicClickableItem" />
    <LinearLayout android:orientation="vertical" android:id="@id/unresolved_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/card_number">
        <Button android:id="@id/card_logo_grid_toggle" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="?imCardLogoGridToggleButtonStartMargin" android:layout_marginTop="?imCardLogoGridToggleButtonTopMargin" android:text="@string/wallet_im_view_card_logos" style="?attr/imCardLogoGridToggleButtonStyle" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/card_logo_grid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" />
    </LinearLayout>
</RelativeLayout>